# Rustaos

./: Cargo.toml  readme.md
bootloader/: boot.asm
src/: main.rs
src/arch/: aarch64.rs  mod.rs  riscv64.rs  x86_64.rs
src/utils/: mod.rs  serial_print.rs
